--- a/packages/client/src/components/Wrapper/Wrapper.scss
+++ b/packages/client/src/components/Wrapper/Wrapper.scss
@@ -1,3 +1,6 @@
 .wrapper-child {
-    height: calc(100vh - 50px);
+    min-height: calc(100vh - 50px);
+    display: flex;
+    flex-direction: column;
+    background-color: #017D80;
 }
